--- a/Memofy/app/src/main/res/layout/cell_game.xml
+++ b/Memofy/app/src/main/res/layout/cell_game.xml
@@ -4,12 +4,14 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingTop="2dp"
-    android:paddingStart="2dp">
+    >
     <androidx.cardview.widget.CardView
         android:id="@+id/cv_cell_container"
         android:layout_width="match_parent"
         android:layout_height="0dp"
+        android:layout_marginTop="4dp"
+        android:layout_marginStart="4dp"
+        app:cardCornerRadius="10dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintDimensionRatio="1:1">
@@ -17,11 +19,12 @@
             android:id="@+id/v_face"
             android:layout_width="match_parent"
             android:layout_height="match_parent"/>
-        <View
+        <ImageView
             android:id="@+id/v_back"
-            android:visibility="gone"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"/>
+            android:layout_height="match_parent"
+            android:src="@android:drawable/ic_menu_help"
+            android:background="#929292"/>
     </androidx.cardview.widget.CardView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
