--- a/Memofy/app/src/main/res/values/colors.xml
+++ b/Memofy/app/src/main/res/values/colors.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#6200EE</color>
+    <color name="colorPrimary">#23A0DA</color>
     <color name="colorPrimaryDark">#3700B3</color>
-    <color name="colorAccent">#03DAC5</color>
+    <color name="colorAccent">@android:color/holo_green_dark</color>
+    <color name="background">@android:color/white</color>
 </resources>
